force-app/main/default/objects/Revenue_Cash_Allocation__c/Revenue_Cash_Allocation__c.object-meta.xml
<CustomObject>
    <label>Revenue Cash Allocation</label>
    <nameField>
        <displayFormat>RCA-{000000}-{000}</displayFormat>
        <label>Revenue Cash Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Cash Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>