force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Cash_Date__c.field-meta.xml
<CustomField>
    <fullName>Cash_Date__c</fullName>
    <label>Cash Date</label>
    <type>Date</type>
</CustomField>