force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Cash_Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>Cash_Forecast_Month__c</fullName>
    <formula>MONTH( Cash_Forecast__r.Period_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Forecast Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>