force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Cash_Year__c.field-meta.xml
<CustomField>
    <fullName>Cash_Year__c</fullName>
    <formula>YEAR(Cash_Forecast__r.Period_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>