force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equity</label>
    <referenceTo>Equity__c</referenceTo>
    <relationshipLabel>Revenue Cash Allocations</relationshipLabel>
    <relationshipName>Revenue_Cash_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>