force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Revenue Cash Allocations</relationshipLabel>
    <relationshipName>Revenue_Cash_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>