force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/MonthAndYear__c.field-meta.xml
<CustomField>
    <fullName>MonthAndYear__c</fullName>
    <formula>Text(Cash_Forecast_Month__c) + &#39;:&#39; + Text(Cash_Forecast_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthAndYear</label>
    <type>Text</type>
</CustomField>