force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Payment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Id__c</fullName>
    <formula>IF(NOT( ISBLANK(Revenue_Account__c)),IF(NOT( ISBLANK(Revenue_Account__r.Payment_Account__c)), CASESAFEID(Revenue_Account__r.Payment_Account__c), CASESAFEID(Revenue_Account__r.Account_Executive__r.Location__r.Payment_Account__c)), IF(NOT(ISBLANK(Equity__c)),Equity__r.Payment_Account__c, null ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account Id</label>
    <type>Text</type>
</CustomField>