force-app/main/default/objects/Revenue_Cash_Allocation__c/fields/Revenue_Contract__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the parent Revenue contract</description>
    <label>Revenue Contract</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Revenue Cash Allocations</relationshipLabel>
    <relationshipName>Revenue_Cash_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>